<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="match_parent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_suitcase"
            android:layout_width="match_parent"
            android:layout_height="66sp"
            android:layout_marginTop="10sp"
            android:src="@mipmap/a"
            />
        <TextView
            android:id="@+id/lab_suitcase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/lab_suitcase"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:src="@mipmap/down"
            />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_into_factory"
            android:layout_width="match_parent"
            android:layout_height="66sp"
            android:layout_marginTop="10sp"
            android:src="@mipmap/e"
            android:layout_margin="10sp"
            />
        <TextView
            android:id="@+id/lab_into_factory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/lab_into_factory"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:src="@mipmap/down"
            />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_leave_factory"
            android:layout_width="match_parent"
            android:layout_height="66sp"
            android:layout_marginTop="10sp"
            android:src="@mipmap/k"
            android:layout_margin="10sp"
            />
        <TextView
            android:id="@+id/lab_leave_factory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/lab_leave_factory"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:src="@mipmap/down"
            />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_into_port"
            android:layout_width="match_parent"
            android:layout_height="66sp"
            android:layout_marginTop="10sp"
            android:src="@mipmap/g"
            android:layout_margin="10sp"
            />
        <TextView
            android:id="@+id/lab_into_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/lab_into_port"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="7">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lab_factory_info"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="1"
                    >
                    <TableRow>
                        <TextView
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_width="wrap_content"
                            android:text="@string/lab_load_time"
                            />
                        <TextView
                            android:id="@+id/lab_load_time"
                            android:textSize="16sp"
                            android:layout_width="match_parent"
                            android:textColor="@color/colorPrimary"
                            />
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_width="wrap_content"
                            android:text="@string/lab_estimate_to_factory"
                            />
                        <TextView
                            android:id="@+id/lab_etime"
                            android:textSize="16sp"
                            android:layout_width="match_parent"
                            android:textColor="@color/colorPrimary"
                            />
                    </TableRow>
                </TableLayout>
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="1"
                    >

                    <TableRow>
                        <TextView
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/lab_factory_name"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/lab_factory_name"/>
                    </TableRow>
                </TableLayout>
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="1"
                    >
                    <TableRow>
                        <TextView
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/lab_factory_address"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/lab_factory_address"/>
                    </TableRow>
                </TableLayout>
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="1"
                    >
                    <TableRow>
                        <TextView
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/lab_factory_contact"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/lab_factory_contact"/>
                    </TableRow>
                </TableLayout>
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="1"
                    >
                    <TableRow>
                        <TextView
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/lab_factory_mobileno"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/lab_factory_mobileno"/>
                    </TableRow>

                </TableLayout>
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="1"
                    >
                    <TableRow>
                        <TextView
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/lab_factory_phone"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/lab_factory_phone"/>
                    </TableRow>

                </TableLayout>
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="1"
                    >
                    <TableRow>
                        <TextView
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/lab_remark"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/lab_remark"/>
                    </TableRow>

                </TableLayout>
            </LinearLayout>

            <!--View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_margin="10sp"
                android:background="@color/colorGray" /-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lab_container_info"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="1"
                    >
                    <TableRow>
                        <TextView
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/lab_container_type"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/lab_container_type"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/lab_container_no"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/lab_container_no"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/lab_seal_no"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/lab_seal_no"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/lab_tare"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/lab_tare"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/lab_yard_name"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/lab_yard_name"/>
                    </TableRow>
                </TableLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lab_dock_info"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="1"
                    >

                    <TableRow>
                        <TextView
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/lab_dock_name"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/lab_dock_name"/>
                    </TableRow>


                </TableLayout>


            </LinearLayout>


        </LinearLayout>
    </ScrollView>



</LinearLayout>
