<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ScrollView>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_logo"
            android:layout_weight="0.42" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lab_username"
            android:inputType="textPersonName"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@android:drawable/ic_menu_myplaces"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lab_password"
            android:inputType="textPassword"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@android:drawable/ic_lock_idle_lock"
            />
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_marginTop="52dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
           android:text="@string/lab_login"/>

    </LinearLayout>




</LinearLayout>