<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_marginTop="15dp"
            android:id="@+id/ic_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_driver" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:background="#EEEEE0" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/lab_login_name"
                android:layout_marginLeft="10dp"
                android:layout_weight="3"
                android:layout_width="45sp"
                android:layout_height="wrap_content"
                android:text="@string/lab_username" />
            <TextView
                android:id="@+id/txv_login_name"
                android:layout_weight="7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:background="#EEEEE0" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/lab_mobile_no"
                android:layout_marginLeft="10dp"
                android:layout_weight="3"
                android:layout_width="45sp"
                android:layout_height="wrap_content"
                android:text="@string/lab_user_mobile_no" />
            <TextView
                android:id="@+id/txv_mobile_no"
                android:layout_weight="7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:background="#EEEEE0" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/lab_fleet_name"
                android:layout_marginLeft="10dp"
                android:layout_weight="3"
                android:layout_width="45sp"
                android:layout_height="wrap_content"
                android:text="@string/lab_user_fleet_name" />
            <TextView
                android:id="@+id/txv_fleet_name"
                android:layout_weight="7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:background="#EEEEE0" />


        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_marginTop="52dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/lab_logout"/>

    </LinearLayout>
</ScrollView>
